# Real-Time-Transcriptor

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  eslint.config.js  package-lock.json  package.json
apps/backend/: alembic.ini  pyproject.toml  rtt-backend.spec  rtt-setup.spec  setup.py
apps/backend/alembic/: env.py
apps/backend/alembic/versions/: 001_initial_schema.py  002_session_artifacts.py
apps/backend/app/: config.py  error_handlers.py  main.py  paths.py
apps/backend/app/db/: __init__.py  engine.py  models.py
apps/backend/app/modules/audio/: __init__.py  capture.py  chunker.py  errors.py  file_source.py  microphone.py  path_validation.py  source.py  vad.py
apps/backend/app/modules/export/: __init__.py  errors.py  http.py  payload.py  service.py  time_format.py
apps/backend/app/modules/export/formats/: docx.py  json_format.py  pdf.py  srt.py  subtitles.py  txt.py  vtt.py
apps/backend/app/modules/llm/: __init__.py  client.py  errors.py  prompts.py  service.py
apps/backend/app/modules/sessions/: __init__.py  audio_writer.py  errors.py  fts.py  mapping.py  recording_coordinator.py  service.py  transcript_stream.py
apps/backend/app/modules/settings/: __init__.py  diagnostics.py  errors.py  model_catalog.py  ollama_models.py  runtime.py  service.py  store.py  validation.py
apps/backend/app/modules/transcription/: __init__.py  errors.py  whisper_service.py
apps/backend/app/routes/: audio.py  health.py  llm.py  sessions.py  settings.py  transcript.py
apps/backend/scripts/: backend_entry.py  first_run_setup.py  setup_entry.py
apps/backend/tests/: conftest.py  mock_source.py  test_audio_routes.py  test_audio_source.py  test_capture_service.py  test_chunker.py  test_export.py  test_file_source.py  test_first_run_setup.py  test_llm_routes.py  test_paths.py  test_session_service.py  test_sessions_routes.py  test_whisper_service.py
scripts/: build-backend.mjs  lint-python.mjs  resolve-venv-python.mjs  run-setup.mjs
(+73 files in other folders)
