[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "real-time-transcriptor-backend"
version = "0.1.0"
description = "FastAPI backend for Real-Time Transcriptor"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic-settings>=2.6.0",
    "httpx>=0.28.0",
    "tqdm>=4.67.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
]
models = [
    "openai-whisper>=20240930",
]

[tool.setuptools.packages.find]
where = [".", "../../packages/shared/python"]
include = ["app*", "rtt_shared*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.format]
quote-style = "double"
