[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "real-time-transcriptor-backend"
version = "0.1.0"
description = "FastAPI backend for Real-Time Transcriptor"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic-settings>=2.6.0",
    "httpx>=0.28.0",
    "tqdm>=4.67.0",
    "numpy>=2.0.0",
    "sounddevice>=0.5.0",
    "sqlalchemy>=2.0.36",
    "alembic>=1.14.0",
    "reportlab>=4.2.0",
    "python-docx>=1.1.2",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]
audio = [
    "torch>=2.0.0",
    "silero-vad>=5.1.0",
]
models = [
    "faster-whisper>=1.1.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = [".", "../../packages/shared/python"]
include = ["app*", "rtt_shared*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.format]
quote-style = "double"
